# agentos

./: .dockerignore  .gitignore  .prettierignore  CLAUDE.md  ELEMENT-FEATURE-AUDIT.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json  vitest.workspace.ts
.github/workflows/: build-images.yaml
agents/echo/: .env.example  package.json
agents/echo/src/: index.ts
apps/agent-service/: .env.example  package.json  registration.yaml
apps/agent-service/src/: index.ts
apps/hosted-api/: package.json  tsconfig.json
apps/hosted-api/src/: index.ts  k8s.ts  matrix.ts
apps/runtime/: package.json  registration.yaml
apps/runtime/src/: index.ts
apps/shell/: index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/shell/src/: App.tsx
apps/shell/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/migrations/: 001_initial.sql
apps/shell/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
deploy/: docker-compose.hosted.yaml
deploy/docker/: Dockerfile.agent  Dockerfile.hosted-api  Dockerfile.shell-hosted
deploy/helm/openclaw/: Chart.yaml  values.yaml
deploy/k8s/hosted/: ingress.yaml  (+5 more)
deploy/nginx/: hosted.conf
dev/: setup.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  USER_STORIES.md
skills/agentos-agent/: README.md  SKILL.md
skills/workspace-agent/: README.md  SKILL.md
(+238 files in other folders)
