[package]
name = "agentos"
version = "0.1.0"
description = "AgentOS — agent-first operating system built on the Matrix protocol"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "agentos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
